2008-07-12  higepon  <higepon@users.sourceforge.jp>

        * freeproc.cpp (scheme::getEnvironmentVariablesEx): Added get-environment-variables.

        * tools/psyntax-r6rs/psyntax-buildscript-mosh.ss (identifier->library-map): Added for Mosh.

        * freeproc.h (scheme): renamed sys-getenv -> get-environment-variable.

        * freeproc.cpp (scheme::errorEx): Improved message for (error ...).

        * main.cpp (main): Added -b "R6RS batch mode" using psyntax.

        * VM.cpp (VM::getStackTrace): Fixed stack trace bug for <subr>.

        * freeproc.cpp (scheme::vectorPEx): Added vector?.

        * Added r6rs-test directory.

        * library.scm (string): Added document of (string ...).

        * freeproc.cpp (scheme::stringEx): Added (string ...).

2008-07-11  higepon  <higepon@users.sourceforge.jp>

        * match.cpp: pre-compiled.

2008-07-10  higepon  <higepon@users.sourceforge.jp>

        * CompilerProcedures.cpp (labelEx): Moved $label to C++.

2008-07-09  higepon  <higepon@users.sourceforge.jp>

        * compiler.scm (pass3/find-free): locals, can-frees and frees becomes list of symbols(used to be list of lvars).

2008-07-07  higepon  <higepon@users.sourceforge.jp>

        * compiler.scm (merge-insn): Moved merge-insn to C++.

2008-07-05  higepon  <higepon@users.sourceforge.jp>

        * VM.cpp (VM::run): RE added "APPEND2" instruction for perfomance.

        * scheme.h (scheme): inlined car(), cdr(), cons(), makeClosure().

2008-07-04  higepon  <higepon@users.sourceforge.jp>

        * compiler.scm (pass3/compile-refer, pass1/find-symbol-in-lvars): Rewrote in C++ for perfomance.

        * CompilerProcedures.h: Added procedures for compiler.

        * compiler.scm (pass3/add-can-frees2): Improved very slow (append2 ...) call on compiler.

2008-07-03  higepon  <higepon@users.sourceforge.jp>

        * CodeBuilder.h (scheme): use ObjectVector instead of gc_vector<Object, gc_allocator<Object> > for perfomance.
